[gd_scene load_steps=10 format=3 uid="uid://dgaph8aeas6sh"]

[ext_resource type="Script" path="res://scripts/desafio.gd" id="1_os77a"]
[ext_resource type="Texture2D" uid="uid://rhake6myi3g8" path="res://assets/2 - Mr. Mochi/Running (32 x 32).png" id="2_5s8gs"]
[ext_resource type="Script" path="res://scripts/Player_top_down.gd" id="2_hco7c"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q7ro5"]
radius = 7.0
height = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7m8nu"]
atlas = ExtResource("2_5s8gs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yoqc"]
atlas = ExtResource("2_5s8gs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcsux"]
atlas = ExtResource("2_5s8gs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngn3g"]
atlas = ExtResource("2_5s8gs")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mfrdt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m8nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yoqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcsux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngn3g")
}],
"loop": false,
"name": &"wlak",
"speed": 5.0
}]

[node name="Desafio" type="Node2D"]
script = ExtResource("1_os77a")

[node name="Button1" type="Button" parent="."]
offset_left = 38.0
offset_top = 8.0
offset_right = 166.0
offset_bottom = 72.0

[node name="Button2" type="Button" parent="."]
offset_left = 186.0
offset_top = 10.0
offset_right = 314.0
offset_bottom = 74.0

[node name="Button3" type="Button" parent="."]
offset_left = 333.0
offset_top = 11.0
offset_right = 461.0
offset_bottom = 75.0

[node name="Button4" type="Button" parent="."]
offset_left = 481.0
offset_top = 13.0
offset_right = 609.0
offset_bottom = 77.0

[node name="Button5" type="Button" parent="."]
offset_left = 39.0
offset_top = 91.0
offset_right = 167.0
offset_bottom = 155.0

[node name="Button6" type="Button" parent="."]
offset_left = 187.0
offset_top = 93.0
offset_right = 315.0
offset_bottom = 157.0

[node name="Button7" type="Button" parent="."]
offset_left = 334.0
offset_top = 94.0
offset_right = 462.0
offset_bottom = 158.0

[node name="Button8" type="Button" parent="."]
offset_left = 481.0
offset_top = 95.0
offset_right = 609.0
offset_bottom = 159.0

[node name="Button9" type="Button" parent="."]
offset_left = 41.0
offset_top = 180.0
offset_right = 169.0
offset_bottom = 244.0

[node name="Button10" type="Button" parent="."]
offset_left = 188.0
offset_top = 183.0
offset_right = 316.0
offset_bottom = 247.0

[node name="Button11" type="Button" parent="."]
offset_left = 335.0
offset_top = 184.0
offset_right = 463.0
offset_bottom = 248.0

[node name="Button12" type="Button" parent="."]
offset_left = 483.0
offset_top = 185.0
offset_right = 611.0
offset_bottom = 249.0

[node name="Button13" type="Button" parent="."]
offset_left = 39.0
offset_top = 276.0
offset_right = 167.0
offset_bottom = 340.0

[node name="Button14" type="Button" parent="."]
offset_left = 188.0
offset_top = 277.0
offset_right = 316.0
offset_bottom = 341.0

[node name="Button15" type="Button" parent="."]
offset_left = 337.0
offset_top = 278.0
offset_right = 465.0
offset_bottom = 342.0

[node name="Button16" type="Button" parent="."]
offset_left = 484.0
offset_top = 278.0
offset_right = 612.0
offset_bottom = 342.0

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(55, 31)
script = ExtResource("2_hco7c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_q7ro5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_mfrdt")
animation = &"wlak"
frame = 3
frame_progress = 1.0

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="Button10" to="." method="_on_button_10_pressed"]
[connection signal="pressed" from="Button11" to="." method="_on_button_11_pressed"]
[connection signal="pressed" from="Button12" to="." method="_on_button_12_pressed"]
[connection signal="pressed" from="Button13" to="." method="_on_button_13_pressed"]
[connection signal="pressed" from="Button14" to="." method="_on_button_14_pressed"]
[connection signal="pressed" from="Button15" to="." method="_on_button_15_pressed"]
[connection signal="pressed" from="Button16" to="." method="_on_button_16_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
